--- a/app/src/main/res/layout/activity_create_room.xml
+++ b/app/src/main/res/layout/activity_create_room.xml
@@ -102,6 +102,48 @@
 
                 <TextView
                     android:layout_width="0dp"
+                    android:layout_height="fill_parent"
+                    android:gravity="center_vertical"
+                    android:text="Giới tính : "
+                    android:layout_weight="1"
+                    android:fontFamily="sans-serif-medium"
+                    />
+
+                <RadioGroup
+                    android:id="@+id/radioButton_gender"
+                    android:layout_width="0dp"
+                    android:layout_weight="3"
+                    android:orientation="horizontal"
+                    android:layout_height="wrap_content">
+
+                    <RadioButton
+                        android:id="@+id/radioButton_male"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Nam"
+                        />
+
+                    <RadioButton
+                        android:id="@+id/radioButton_female"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Nữ"
+                        />
+
+                </RadioGroup>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                >
+
+                <TextView
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="Ngày sinh : "
                     android:layout_weight="1"
