--- a/app/src/main/res/layout/fragment_guest_in_room.xml
+++ b/app/src/main/res/layout/fragment_guest_in_room.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.AppCompatButton
-            android:id="@+id/create_room_submit"
+            android:id="@+id/create_guest_in_room"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:text="Thêm khách"
