--- a/app/src/main/res/layout/activity_room_detail.xml
+++ b/app/src/main/res/layout/activity_room_detail.xml
@@ -13,7 +13,7 @@
         android:id="@+id/tablayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="#fff"
         android:minHeight="?attr/actionBarSize"
         app:tabMaxWidth="0dp"
         app:tabGravity="fill"
@@ -21,10 +21,15 @@
         app:tabIndicatorColor="@color/roomDetailTabIndicatorColor"
         app:tabIndicatorHeight="3dp"
         app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
-        app:tabTextColor="@android:color/white"
+        app:tabTextColor="#46bff8"
+        app:tabSelectedTextColor="#000"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
     </android.support.design.widget.TabLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#46bff8"/>
 
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
