--- a/app/src/main/res/layout/fragment_guest_in_room.xml
+++ b/app/src/main/res/layout/fragment_guest_in_room.xml
@@ -18,7 +18,7 @@
             android:id="@+id/create_guest_in_room"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:text="Thêm khách"
+            android:text="Thêm"
             android:textAllCaps="false"
             android:theme="@style/ButtonTheme"
             android:fontFamily="sans-serif-medium"
