--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,9 +8,9 @@
     <color name="guestItemBackground">#fff</color>
     <color name="guestItemProps">#888</color>
     <color name="actionBarBackground">#46bff8</color>
-    <color name="roomDetailTabIndicatorColor">#fff</color>
+    <color name="roomDetailTabIndicatorColor">#46bff8</color>
     <color name="btnRoomEditBackground">#46bff8</color>
     <!--<color name="btnRoomCreationSubmit">#46bff8</color>-->
-    <color name="btnRoomCreationSubmit">#ebf0ef</color>
-    <color name="btnCancel">#EE2C2C</color>
+    <color name="btnRoomCreationSubmit">#d9534f</color>
+    <color name="btnCancel">#f5f5f5</color>
 </resources>
