--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,7 +19,7 @@
     <style name="ButtonTheme" parent="Theme.AppCompat.Light">
         <item name="colorControlHighlight">#8c8c8c</item>
         <item name="colorButtonNormal">@color/btnRoomCreationSubmit</item>
-        <item name="android:textColor">#5c5c5c</item>
+        <item name="android:textColor">#fff</item>
         <item name="android:textSize">10sp</item>
         <item name="android:radius">10dp</item>
     </style>
@@ -27,6 +27,7 @@
     <style name="ButtonCancelTheme" parent="Theme.AppCompat.Light">
         <item name="colorControlHighlight">#ffa500</item>
         <item name="colorButtonNormal">@color/btnCancel</item>
+        <item name="android:textColor">#000</item>
     </style>
 
 
