--- a/app/src/main/res/layout/fragment_payment_history.xml
+++ b/app/src/main/res/layout/fragment_payment_history.xml
@@ -8,6 +8,7 @@
 
 
     <LinearLayout
+        android:id="@+id/payment_history_full_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -35,6 +36,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
+                android:fontFamily="sans-serif-medium"
+                android:textSize="12sp"
                 android:layout_weight="1"
                 android:text="Số tiền" />
 
